# zardaloo

./: .env  .sample  Cargo.toml  README.md
src/: main.rs  statics.rs
src/controllers/: mod.rs
src/controllers/data/: dtos.rs  mod.rs  routes.rs
src/controllers/user/: dtos.rs  mod.rs  routes.rs
src/lib/: mod.rs
src/lib/auth/: extractor.rs  mod.rs  token.rs
src/lib/error/: custom_error.rs  db_operation_error.rs  mod.rs  parse_error.rs  thread_error.rs  traits.rs
src/lib/life_manager/: impls.rs  models.rs
zardaloo_db/: Cargo.toml
zardaloo_db/src/: lib.rs
zardaloo_db/src/db/: impls.rs  models.rs  traits.rs
zardaloo_db/src/db_set/: impls.rs  mod.rs  models.rs  traits.rs
zardaloo_db/src/db_value/: impls.rs  mod.rs  models.rs
