[package]
name = "zardaloo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.11"
env_logger = "0.6"
lazy_static = "1.4"
actix-web-validator = "3.0.0"
validator = { version = "0.14", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
sha2 = "0.10.2"
jwt = "0.16.0"
hmac = "0.12.1"